--- a/source/_posts/2022-08-30-hexo-next.md
+++ b/source/_posts/2022-08-30-hexo-next.md
@@ -13,39 +13,44 @@ categories: hexo
 
 > 步骤
 
-  首先要用 npm 资源依赖管理工具安装全局命令 hexo-cli.
+首先要用 npm 资源依赖管理工具安装全局命令 hexo-cli.
 
     npm install hexo-cli -g
 
-  然后使用 hexo 初始化博客目录,比如 blog 目录,目录名要与后续个人建立的 github 上 hexo 托管代码的 repository 库同名.
+然后使用 hexo 初始化博客目录,比如 blog 目录,目录名要与后续个人建立的 github 上 hexo 托管代码的 repository 库同名.
 
     hexo init blog
 
-  接着 github 建库: 建立一个以 w-t-w(我的账号).github.io 结尾的 repository 库,作为 hexo 托管代码的库, github 默认 .github.io 结尾作为用户的网站二级域名,建立一个新的分支作为创作分支(因为主分支是用来发布呈现网站的); 之后,进入生成的 blog 文件夹,在本地添加与远程 repository 库链接关联的句柄简称,并设置本地句柄简称推送/同步远程库上游的分支,与远程库建立安全关联,最后同步远程最新资源.
-  
+接着 github 建库: 建立一个以 w-t-w(我的账号).github.io 结尾的 repository 库,作为 hexo 托管代码的库, github 默认
+.github.io 结尾作为用户的网站二级域名,建立一个新的分支作为创作分支(因为主分支是用来发布呈现网站的); 之后,进入生成的 blog
+文件夹,在本地添加与远程 repository 库链接关联的句柄简称,并设置本地句柄简称推送/同步远程库上游的分支,与远程库建立安全关联,最后同步远程最新资源.
+
     git remote add origin git@github.com:w-t-w/w-t-w.github.io.git
     git pull --set-upstream origin master
 
-  再 npm 下载外部资源依赖包.
+再 npm 下载外部资源依赖包.
 
     npm i/npm install
 
-  或者使用 yarn 下载外部资源依赖包.
+或者使用 yarn 下载外部资源依赖包.
 
     yarn
 
-  最后启动 hexo 自身搭建的服务,生成本地的博客网站服务,默认端口在本地 ip 地址下的 4000 端口,假如你不想启动在 4000 端口,也可使用-p 其他端口号进行配置,比如-p 9777.
+最后启动 hexo 自身搭建的服务,生成本地的博客网站服务,默认端口在本地 ip 地址下的 4000 端口,假如你不想启动在 4000 端口,也可使用-p
+其他端口号进行配置,比如-p 9777.
 
     hexo server
     hexo server -p 9777
 
-  PS: 最好先将本地代码上传至远程之后,再执行 hexo 配置.
+PS: 最好先将本地代码上传至远程之后,再执行 hexo 配置.
 
     git add .
     git commit 'build:hexo next'
     git push
 
-  默认的主题风格 theme 是 landscape ,假如你想更换,可以通过<a href='https://hexo.io/themes/'>https://hexo.io/themes</a>进行筛选,筛选之后进行配置,主题配置见下文.
+默认的主题风格 theme 是 landscape
+,假如你想更换,可以通过<a href='https://hexo.io/themes/'>https://hexo.io/themes</a>进行筛选,筛选之后进行配置,主题配置见下文
+.
 
 # hexo 配置
 
@@ -63,7 +68,8 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
     npm install hexo-deployer-git --save
 
-然后在根目录底下的 _config.yml 文件中更改 deploy 发布配置,将 source 目录下面的内容进行构建发布到 repository github 地址的主分支上.
+然后在根目录底下的 _config.yml 文件中更改 deploy 发布配置,将 source 目录下面的内容进行构建发布到 repository github
+地址的主分支上.
 
     deploy:
         type: git
@@ -76,41 +82,41 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
 > 步骤
 
-  将生成的网站博客项目直接通过 Royal TSX 远程链接管理工具放入云服务器中,链接成功后,下载 nginx 代理.
+将生成的网站博客项目直接通过 Royal TSX 远程链接管理工具放入云服务器中,链接成功后,下载 nginx 代理.
 
     #我这里直接使用阿里云CentOS服务器中默认的基于RPM的软件包管理器yum来下载nginx
     yum install nginx
 
-  下载之后查看全局命令 nginx 是否存在,查看 nginx 的版本.
+下载之后查看全局命令 nginx 是否存在,查看 nginx 的版本.
 
     nginx -v
 
-  如果全局命令不存在 nginx,则运行 source ~/.bash_profile,使得配置在修改了环境变量的情况下进行重置.
+如果全局命令不存在 nginx,则运行 source ~/.bash_profile,使得配置在修改了环境变量的情况下进行重置.
 
     source ~/.bash_profile
 
-  启动 nginx.
+启动 nginx.
 
     nginx
 
-  - 顺便提一下 nginx 的其他命令.重启 nginx.
+- 顺便提一下 nginx 的其他命令.重启 nginx.
 
-        nginx -s reload
+      nginx -s reload
 
-  - 停止 nginx.
+- 停止 nginx.
 
-        nginx -s stop
+      nginx -s stop
 
-  - 通过流(pipe)查询全部用户组 nginx 完整的进程状态.
+- 通过流(pipe)查询全部用户组 nginx 完整的进程状态.
 
-        ps -ef | grep nginx
+      ps -ef | grep nginx
 
-  - 强制杀掉 nginx 进程.
+- 强制杀掉 nginx 进程.
 
-        #28009是 nginx 进程号,通过 ps -ef | grep nginx 可以查询到
-        kill -9 28009
+      #28009是 nginx 进程号,通过 ps -ef | grep nginx 可以查询到
+      kill -9 28009
 
-  配置 nginx,将服务器代理 root 页面指向我们的博客网站.
+配置 nginx,将服务器代理 root 页面指向我们的博客网站.
 
     #通过测试 nginx,查询 nginx 配置文件所在目录
     nginx -t
@@ -147,13 +153,16 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
 > 示例
 
-筛选好个人选中的主题之后,就需要在项目里面进行配置更换。首先需要下载远程 github 库里面的主题项目到项目根目录里面的 themes 文件夹底下,比如本人用的是 next 主题的 hexo.
-    
+筛选好个人选中的主题之后,就需要在项目里面进行配置更换。首先需要下载远程 github 库里面的主题项目到项目根目录里面的 themes
+文件夹底下,比如本人用的是 next 主题的 hexo.
+
     # 注意 hexo 6.x 之前下载 next 主题远程 github 链接与 hexo 6.x 之后不同!
     # hexo 6.x 之前
     git clone https://github.com/iissnan/hexo-theme-next.git themes/next
     # hexo 6.x 之后
     git clone https://github.com/theme-next/hexo-theme-next themes/next
+
+<img src='https://image.white-than-wood.zone/hexo/next_theme.png' style='width: 100%; height: auto;'/>
 
 随后在根目录里面的 _config.yml 文件中更改 theme 配置.
 
@@ -171,7 +180,8 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
 > 步骤
 
-每个主题的语言都是根据博客作者的母语来配置的,要想配置开发者个人国家的语言,还是在项目根目录底下的 _config.yml 文件中更改 language 配置.
+每个主题的语言都是根据博客作者的母语来配置的,要想配置开发者个人国家的语言,还是在项目根目录底下的 _config.yml 文件中更改
+language 配置.
 
     language: zh-CN
 
@@ -183,7 +193,8 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
 > 步骤
 
-hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页)、tags(标签)、about(关于我)、archives(档案)和categories(分类),首先要创建页面.
+hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页)、tags(标签)、about(关于我)、archives(档案)和categories(分类)
+,首先要创建页面.
 
     hexo new page tags
     hexo new page about
@@ -243,7 +254,8 @@ hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页
 
 > 步骤
 
-假如想要更改每一篇博客的文件名称,不再是默认的:title.md的文件名,需要在根目录底下的 _config.yml 文件中更改 new_post_name 配置.
+假如想要更改每一篇博客的文件名称,不再是默认的:title.md的文件名,需要在根目录底下的 _config.yml 文件中更改 new_post_name
+配置.
 
     new_post_name: :year-:month-:day-:title.md
 
@@ -251,13 +263,16 @@ hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页
 
 > 步骤
 
-博客文章一般都会很长的,所以在首页要对博客进行超长省略,要想看所有的内容,点击阅读全文或者文章标题进入全文查看.在 hexo-theme-next 主题版本 7.6 之前需要再主题目录底下的 _config.yml 文件中更改 auto_excerpt 配置.
+博客文章一般都会很长的,所以在首页要对博客进行超长省略,要想看所有的内容,点击阅读全文或者文章标题进入全文查看.在
+hexo-theme-next 主题版本 7.6 之前需要再主题目录底下的 _config.yml 文件中更改 auto_excerpt 配置.
 
     auto_excerpt:
         enable: true
         length: 200
 
-在 hexo-theme-next 主题版本 7.6 之后,由于 auto_excerpt 这种超长省略不应该是主题插件应该做的,作者将此配置移除,并给出新的专门针对此配置的插件 <a href='https://github.com/chekun/hexo-excerpt'>hexo-excerpt</a>.
+在 hexo-theme-next 主题版本 7.6 之后,由于 auto_excerpt
+这种超长省略不应该是主题插件应该做的,作者将此配置移除,并给出新的专门针对此配置的插件 <a href='https://github.com/chekun/hexo-excerpt'>
+hexo-excerpt</a>.
 
 ![](https://image.white-than-wood.zone/hexo/remove_auto_excerpt.png)
 
@@ -277,11 +292,13 @@ hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页
 
 > 步骤
 
-在创作博客时,需要每次手动刷新页面才能看到修改后的结果,感觉非常没有效率,如果存在类hrm热加载这种插件就太爽了! <a href='https://github.com/hexojs/hexo-browsersync'>hexo-browsersync</a> 可以直接解决这个问题.
+在创作博客时,需要每次手动刷新页面才能看到修改后的结果,感觉非常没有效率,如果存在类hrm热加载这种插件就太爽了! <a href='https://github.com/hexojs/hexo-browsersync'>
+hexo-browsersync</a> 可以直接解决这个问题.
 
     npm install hexo-browsersync --save
 
-此插件原理基于 browser-sync ,与 hexo 建立关联,当创作的文件内容发生改变时, browser-sync 就会监听到并刷新浏览器整个页面的内容,做到不需手动刷新,大大提高了创作效率.
+此插件原理基于 browser-sync ,与 hexo 建立关联,当创作的文件内容发生改变时, browser-sync
+就会监听到并刷新浏览器整个页面的内容,做到不需手动刷新,大大提高了创作效率.
 
     #更改根目录底下的 _config.yml 文件,添加 browsersync 属性
     #设置监听 watch 属性为 true 就可以了!
@@ -293,7 +310,8 @@ hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页
 
 > 步骤
 
-上线之后,需要对个人博客进行管理,阅读人数以及次数对于创作者来说是很重要反馈点.统计配置需要更改主题目录底下的 _config.yml 文件,配置 busuanzi_count 卜算子统计.
+上线之后,需要对个人博客进行管理,阅读人数以及次数对于创作者来说是很重要反馈点.统计配置需要更改主题目录底下的 _config.yml
+文件,配置 busuanzi_count 卜算子统计.
 
     #可配置查看个人博客的阅读人数、次数以及每篇博客文章的次数
     busuanzi_count:
@@ -309,9 +327,11 @@ hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页
 
 > 步骤
 
-卜算子统计有时候会出现一些异常,比如pv莫名会加100,uv不再区分单个ip.为了追求更精确、更智能,我们采用百度统计. 统计配置需要更改主题目录底下的 _config.yml 文件,配置 baidu_analytics 百度统计.
+卜算子统计有时候会出现一些异常,比如pv莫名会加100,uv不再区分单个ip.为了追求更精确、更智能,我们采用百度统计.
+统计配置需要更改主题目录底下的 _config.yml 文件,配置 baidu_analytics 百度统计.
 
-根据<a href='https://tongji.baidu.com/main/setting/10000339309/home/site/getjs?siteId=18040501'>百度统计-使用配置-代码获取</a>,将 hm.js 后方自动生成的 id 配置至 baidu_analytics.
+根据<a href='https://tongji.baidu.com/main/setting/10000339309/home/site/getjs?siteId=18040501'>
+百度统计-使用配置-代码获取</a>,将 hm.js 后方自动生成的 id 配置至 baidu_analytics.
 
 ![](https://image.white-than-wood.zone/hexo/baidu_analytics.png)
 
@@ -331,20 +351,23 @@ hexo 提供了几个可供筛选的页面,常用的有这么几个：home(首页
     subtitle: 道阻且长,行则将至
     description: 前端领域内所不知道的都探索于此!
 
-再主题目录底下的 _config.yml 文件重设置个人的github(github托管代码网址)、google(google个人资料网址)、gmail(gmail邮箱网址)、twitter(twitter个人微博网址)等等,比如本人的配置.
+再主题目录底下的 _config.yml 文件重设置个人的github(github托管代码网址)、google(google个人资料网址)、gmail(gmail邮箱网址)
+、twitter(twitter个人微博网址)等等,比如本人的配置.
 
     social:
       GitHub: https://github.com/w-t-w || fab fa-github
       E-Mail: https://dreamthen.00@gmail.com || fab fa-envelope
       Google: https://plus.google.com/u/0/103833130011211353424 || fab fa-google
 
-发布到 GitHub Page 上之后,你会发现 README.md 莫名的消失,主要是因为 hexo 构建发布到远程的目录只是 source 目录,所以只要将 README.md copy 一份放到 source 目录下,并且配置渲染时需要跳过的文件就可以了.
+发布到 GitHub Page 上之后,你会发现 README.md 莫名的消失,主要是因为 hexo 构建发布到远程的目录只是 source 目录,所以只要将
+README.md copy 一份放到 source 目录下,并且配置渲染时需要跳过的文件就可以了.
 
     #hexo 构建渲染时会将 source 目录下 markdown 类型文件转译为 html,我们不需要将 README.md 转译,所以直接 skip render
     #更改根目录底下的 _config.yml 文件,修改 skip_render 属性
     skip_render: README.md
 
-当创作中图片过小,阅读者无法看清的情况下,放大配置就已然成为必要 .fancybox 配置可以点击使图片放大,并可同时查看全文的图片.更改主题目录下的 _config.yml 文件 fancybox 属性.
+当创作中图片过小,阅读者无法看清的情况下,放大配置就已然成为必要 .fancybox
+配置可以点击使图片放大,并可同时查看全文的图片.更改主题目录下的 _config.yml 文件 fancybox 属性.
 
     # FancyBox is a tool that offers a nice and elegant way to add zooming functionality for images.
     # For more information: https://fancyapps.com/fancybox/
