accumulation:hexo next

--- a/source/_posts/2022-08-30-hexo-next.md
+++ b/source/_posts/2022-08-30-hexo-next.md
@@ -82,9 +82,9 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
 > 步骤
 
-将生成的网站博客项目直接通过 Royal TSX 远程链接管理工具放入云服务器中,链接成功后,下载 nginx 代理.
+将生成的网站博客项目直接通过 <a href='https://macwk.com/soft/royal-tsx'>Royal TSX(破解版😜)</a> 远程链接管理工具放入云服务器中,链接成功后,下载 nginx 代理.
 
-    #我这里直接使用阿里云CentOS服务器中默认的基于RPM的软件包管理器yum来下载nginx
+    # 我这里直接使用阿里云CentOS服务器中默认的基于RPM的软件包管理器yum来下载nginx
     yum install nginx
 
 下载之后查看全局命令 nginx 是否存在,查看 nginx 的版本.
