build:搭建hexo gitalk

--- a/source/_posts/2022-08-30-hexo-next.md
+++ b/source/_posts/2022-08-30-hexo-next.md
@@ -82,7 +82,7 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
 
 > 步骤
 
-将生成的网站博客项目直接通过 <a href='https://macwk.com/soft/royal-tsx'>Royal TSX(破解版😜)</a> 远程链接管理工具放入云服务器中,链接成功后,下载 nginx 代理.
+将生成的网站博客项目直接通过 <a href='https://filezilla-project.org' />Filezilla</a> 远程服务文件传输工具放入云服务器中;接着通过 <a href='https://macwk.com/soft/royal-tsx'>Royal TSX(破解版😜)</a> 远程服务管理工具对服务器进行深度管理,链接成功后,下载 nginx 代理.
 
     # 我这里直接使用阿里云CentOS服务器中默认的基于RPM的软件包管理器yum来下载nginx
     yum install nginx
@@ -128,14 +128,17 @@ PS: 以下所说的"根目录"指的就是当前创作的 repository 目录,"主
         listen       80 default_server;
         listen       [::]:80 default_server;
         #域名配置,需要申请购买备案(国内域名需要备案,国外域名则不需要)
-        server_name  _;
+        server_name  localhost;
         #修改root页面向我们的网站博客项目
-        root         /usr/share/nginx/html;
+        root         /root/w-t-w;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location / {
+            index index.html index.htm;
+            # 将 router 路由中不存在的页面重定向至 index.html.
+            try_files $uri $uri/ /index.html;
         }
 
         error_page 404 /404.html;
@@ -338,6 +341,517 @@ hexo-browsersync</a> 可以直接解决这个问题.
     # Baidu Analytics
     # See: https://tongji.baidu.com
     baidu_analytics: 31f07c2ec89d10385ec28e8eea5bbc3a
+
+#### hexo Gitalk留言板配置
+
+> 步骤
+
+留言板 comments 是创作者与阅读者进行互动反馈的窗口,可以使阅读者与创作者共同进步.对于 hexo 来说,支持的留言板模式有很多种: 'disqus | disqusjs | changyan | livere | gitalk | utterances',比较常见、用户量比较大且与 github 关联性比较强的就是 gitalk 以及 disqus,disqusjs 需要'梯子'🐶才能评论,那么还是选用 gitalk .留言板配置需要更改主题目录下的 _config.yml 文件.
+
+配置comments:
+
+    # Multiple Comment System Support
+    comments:
+        # Available values: tabs | buttons
+        style: tabs
+        # Choose a comment system to be displayed by default.
+        # Available values: disqus | disqusjs | changyan | livere | gitalk | utterances
+        active: gitalk
+        # Setting `true` means remembering the comment system selected by the visitor.
+        storage: true
+        # Lazyload all comment systems.
+        lazyload: false
+        # Modify texts or order for any naves, here are some examples.
+        nav:
+            gitalk:
+                order: -2
+            disqus:
+                text: Load Disqus
+                order: -1
+
+配置gitalk:
+
+    # Gitalk
+    # For more information: https://gitalk.github.io
+    gitalk:
+        enable: true
+        github_id: w-t-w # GitHub repo owner
+        repo: w-t-w.github.io # Repository name to store issues
+        client_id: 1191ab5290535c1acb09 # GitHub Application Client ID
+        client_secret: 8d2cbebac1ae1230f84d1f9f7a36f8008a42c14b # GitHub Application Client Secret
+        admin_user: w-t-w # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
+        distraction_free_mode: true # Facebook-like distraction free mode
+        # When the official proxy is not available, you can change it to your own proxy address
+        proxy: https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token
+        # proxy: login/oauth/access_token # This is official proxy address
+        # Gitalk's display language depends on user's browser or system environment
+        # If you want everyone visiting your site to see a uniform language, you can set a force language value
+        # Available values: en | es-ES | fr | ru | zh-CN | zh-TW
+        language: zh-CN
+
+上面的配置项中有几个需要说明的：
+
+* client_id 与 client_secret 是 Github 的 OAuth 认证(下一个部分会介绍).
+* github_id 与 admin_user 这里建议填一样,填成个人的 github 账号名(不是邮箱,也不是用户名).
+* proxy 默认即是上面的地址,它其实会回调到这里<a href='https://github.com/login/oauth/access_token'>https://github.com/login/oauth/access_token</a>.
+* 无论是部署至 GitHub Page 个人网站,还是部署至个人申请购买的云服务器,上面三点是必须要实行的,proxy 403 问题主要是在部署至个人申请购买的云服务器中时会遇到,而部署至 GitHub Page 个人网站不能进行自定义配置反向代理,所以只能使用 Gitalk 官方搭建的代理.
+
+一. Github 的 OAuth 认证.
+
+前提是得有一个 github 账号,才能注册 OAuth application ,这是<a href='https://github.com/settings/applications/new'> OAuth 应用注册地址</a>.
+
+![](https://image.white-than-wood.zone/hexo/github_auth_registers.png)
+
+PS: 如果有自定义域名(如个人申请的阿里云域名),则在上图中填入自定义域名.
+
+注册之后,点击下图中'Generate a new client secret'按钮,在个人账号下的Settings -> Developer settings -> OAuth Apps下面可以查看 OAuth 认证 client_id 与 client_secret.
+
+![](https://image.white-than-wood.zone/hexo/developer_setting.png)
+
+二. Gitalk 自动初始化.
+
+原理: 通过 sitemap 中的信息,请求 github 开放 api 达到自动产生 issues 的目的.
+基本的要求: github API 需要请求 token.
+
+* 申请 github Token.
+
+  我们需要使用 Personal access tokens 方式,这种方式限制每小时5000次,结合缓存功能,基本满足需求.
+  从 Github 的 <a href='https://github.com/settings/tokens'>Personal access tokens</a> 页面,点击 <a href='https://github.com/settings/tokens/new'>Generate new token</a>.
+
+![](https://image.white-than-wood.zone/hexo/access_tokens.png)
+
+* 安装 npm 依赖项.
+
+      npm i -D md5 moment request xml-parser
+      npm i -S hexo-generator-sitemap
+
+* 配置 sitemap.
+
+  在根目录中创建 sitemap_template.xml.
+
+  ```xml
+  <?xml version="1.0" encoding="UTF-8"?>
+  <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+    {% for post in posts %}
+    <url>
+      <loc>{{ post.permalink | uriencode }}</loc>
+      {% if post.updated %}
+      <lastmod>{{ post.updated.toISOString() }}</lastmod>
+      {% elif post.date %}
+      <lastmod>{{ post.date.toISOString() }}</lastmod>
+      {% endif %}
+      <date>{{ post.date }}</date>
+      <title>{{ post.title + ' | ' + config.title }}</title>
+      {# nunjucks 模版语法 https://github.com/mozilla/nunjucks #}
+      <desc>{{ post.description | default(post.excerpt) | default(post.content) | default(config.description) | striptags | truncate(200, true, '') }}</desc>
+    </url>
+    {% endfor %}
+  </urlset>
+  ```
+
+* 修改根目录下的 _config.yml.
+    
+      #Sitemap
+      sitemap:
+        path: sitemap.xml
+        template: ./sitemap_template.xml
+        rel: false
+        tag: true
+        category: false
+
+* 生成 sitemap.xml 生产环境文件.
+
+    hexo clean && hexo generate
+
+* 根目录添加 talk-auto-init.js (注意还是不要将此文件置于github中,建议ignore).
+
+  ```javascript
+  const fs = require('fs');
+  const path = require('path');
+  const url = require('url');
+  
+  const request = require('request');
+  const xmlParser = require('xml-parser');
+  const md5 = require('md5');
+  
+  // 配置信息
+  const config = {
+    username: 'white-than-wood', // GitHub repository 所有者，可以是个人或者组织。对应 Gitalk 配置中的 owner
+    repo: "white-than-wood.github.io", // 储存评论 issue 的 github 仓库名，仅需要仓库名字即可。对应 Gitalk 配置中的 repo
+    token: 'ghp_EuXHDkOxxxxxxxxxxxxxxxxxxxxxxxxxxxxx', // 前面申请的 personal access token
+    sitemap: path.join(__dirname, './public/sitemap.xml'), // 个人站点的 sitemap 文件地址
+    cache: true, // 是否启用缓存，启用缓存会将已经初始化的数据写入配置的 gitalkCacheFile 文件，下一次直接通过缓存文件判断
+    gitalkCacheFile: path.join(__dirname, './gitalk-init-cache.json'), // 用于保存 gitalk 已经初始化的 id 列表
+    gitalkErrorFile: path.join(__dirname, './gitalk-init-error.json'), // 用于保存 gitalk 初始化报错的数据
+  };
+  
+  const api = 'https://api.github.com/repos/' + config.username + '/' + config.repo + '/issues';
+  
+  /**
+   * 读取 sitemap 文件
+     * 远程 sitemap 文件获取可参考 https://www.npmjs.com/package/sitemapper
+     */
+  const sitemapXmlReader = (file) => {
+      try {
+        const data = fs.readFileSync(file, 'utf8');
+        const sitemap = xmlParser(data);
+        let ret = [];
+        sitemap.root.children.forEach(function (url) {
+          const loc = url.children.find(function (item) {
+            return item.name === 'loc';
+          });
+          if (!loc) {
+            return false;
+          }
+          const title = url.children.find(function (item) {
+            return item.name === 'title';
+          });
+          const desc = url.children.find(function (item) {
+            return item.name === 'desc';
+          });
+          const date = url.children.find(function (item) {
+            return item.name === 'date';
+          });
+          ret.push({
+            url: loc.content,
+            title: title.content,
+            desc: desc.content,
+            date: date.content,
+          });
+        });
+        return ret;
+      } catch (e) {
+        return [];
+      }
+  };
+  
+  // 获取 gitalk 使用的 id
+  const getGitalkId = ({
+                         url: u,
+                         date
+                       }) => {
+    const link = url.parse(u);
+    // 链接不存在，不需要初始化
+    if (!link || !link.pathname) {
+      return false;
+    }
+    if (!date) {
+      return false;
+    }
+    return md5(link.pathname);
+  };
+  
+  /**
+   * 通过以请求判断是否已经初始化
+     * @param {string} gitalk 初始化的id
+     * @return {[boolean, boolean]} 第一个值表示是否出错，第二个值 false 表示没初始化， true 表示已经初始化
+     */
+  const getIsInitByRequest = (id) => {
+      const options = {
+        headers: {
+          'Authorization': 'token ' + config.token,
+          'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36',
+          'Accept': 'application/json'
+        },
+        url: api + '?labels=' + id + ',Gitalk',
+        method: 'GET'
+      };
+      return new Promise((resolve) => {
+        request(options, function (err, response, body) {
+          if (err) {
+            return resolve([err, false]);
+          }
+          if (response.statusCode != 200) {
+            return resolve([response, false]);
+          }
+          const res = JSON.parse(body);
+          if (res.length > 0) {
+            return resolve([false, true]);
+          }
+          return resolve([false, false]);
+        });
+      });
+  };
+  
+  /**
+   * 通过缓存判断是否已经初始化
+     * @param {string} gitalk 初始化的id
+     * @return {boolean} false 表示没初始化， true 表示已经初始化
+     */
+  const getIsInitByCache = (() => {
+      // 判断缓存文件是否存在
+      let gitalkCache = false;
+      try {
+        gitalkCache = require(config.gitalkCacheFile);
+      } catch (e) {}
+      return function (id) {
+        if (!gitalkCache) {
+          return false;
+        }
+        if (gitalkCache.find(({
+                                id: itemId
+                              }) => (itemId === id))) {
+          return true;
+        }
+        return false;
+      };
+  })();
+  
+  // 根据缓存，判断链接是否已经初始化
+  // 第一个值表示是否出错，第二个值 false 表示没初始化， true 表示已经初始化
+  const idIsInit = async (id) => {
+    if (!config.cache) {
+      return await getIsInitByRequest(id);
+    }
+    // 如果通过缓存查询到的数据是未初始化，则再通过请求判断是否已经初始化，防止多次初始化
+    if (getIsInitByCache(id) === false) {
+      return await getIsInitByRequest(id);
+    }
+    return [false, true];
+  };
+  
+  // 初始化
+  const gitalkInit = ({
+                        url,
+                        id,
+                        title,
+                        desc
+                      }) => {
+    //创建issue
+    const reqBody = {
+      'title': title,
+      'labels': [id, 'Gitalk'],
+      'body': url + '\r\n\r\n' + desc
+    };
+  
+    const options = {
+      headers: {
+        'Authorization': 'token ' + config.token,
+        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36',
+        'Accept': 'application/json',
+        'Content-Type': 'application/json;charset=UTF-8'
+      },
+      url: api,
+      body: JSON.stringify(reqBody),
+      method: 'POST'
+    };
+    return new Promise((resolve) => {
+      request(options, function (err, response, body) {
+        if (err) {
+          return resolve([err, false]);
+        }
+        if (response.statusCode != 201) {
+          return resolve([response, false]);
+        }
+        return resolve([false, true]);
+      });
+    });
+  };
+  
+  
+  /**
+   * 写入内容
+     * @param {string} fileName 文件名
+     * @param {string} content 内容
+     */
+  const write = async (fileName, content, flag = 'w+') => {
+      return new Promise((resolve) => {
+        fs.open(fileName, flag, function (err, fd) {
+          if (err) {
+            resolve([err, false]);
+            return;
+          }
+          fs.writeFile(fd, content, function (err) {
+            if (err) {
+              resolve([err, false]);
+              return;
+            }
+            fs.close(fd, (err) => {
+              if (err) {
+                resolve([err, false]);
+                return;
+              }
+            });
+            resolve([false, true]);
+          });
+        });
+      });
+  };
+  
+  const init = async () => {
+    const urls = sitemapXmlReader(config.sitemap);
+    // 报错的数据
+    const errorData = [];
+    // 已经初始化的数据
+    const initializedData = [];
+    // 成功初始化数据
+    const successData = [];
+    for (const item of urls) {
+      const {
+        url,
+        date,
+        title,
+        desc
+      } = item;
+      const id = getGitalkId({
+        url,
+        date
+      });
+      if (!id) {
+        console.log(`id: 生成失败 [ ${id} ] `);
+        errorData.push({
+          ...item,
+          info: 'id 生成失败',
+        });
+        continue;
+      }
+      const [err, res] = await idIsInit(id);
+      if (err) {
+        console.log(`Error: 查询评论异常 [ ${title} ] , 信息：`, err || '无');
+        errorData.push({
+          ...item,
+          info: '查询评论异常',
+        });
+        continue;
+      }
+      if (res === true) {
+        // console.log(`--- Gitalk 已经初始化 --- [ ${title} ] `);
+        initializedData.push({
+          id,
+          url,
+          title,
+        });
+        continue;
+      }
+      console.log(`Gitalk 初始化开始... [ ${title} ] `);
+      const [e, r] = await gitalkInit({
+        id,
+        url,
+        title,
+        desc
+      });
+      if (e || !r) {
+        console.log(`Error: Gitalk 初始化异常 [ ${title} ] , 信息：`, e || '无');
+        errorData.push({
+          ...item,
+          info: '初始化异常',
+        });
+        continue;
+      }
+      successData.push({
+        id,
+        url,
+        title,
+      });
+      console.log(`Gitalk 初始化成功! [ ${title} ] - ${id}`);
+      continue;
+    }
+  
+    console.log(''); // 空输出，用于换行
+    console.log('--------- 运行结果 ---------');
+    console.log(''); // 空输出，用于换行
+  
+    if (errorData.length !== 0) {
+      console.log(`报错数据： ${errorData.length} 条。参考文件 ${config.gitalkErrorFile}。`);
+      await write(config.gitalkErrorFile, JSON.stringify(errorData, null, 2));
+    }
+  
+    console.log(`本次成功： ${successData.length} 条。`);
+  
+    // 写入缓存
+    if (config.cache) {
+      console.log(`写入缓存： ${(initializedData.length + successData.length)} 条，已初始化 ${initializedData.length} 条，本次成功： ${successData.length} 条。参考文件 ${config.gitalkCacheFile}。`);
+      await write(config.gitalkCacheFile, JSON.stringify(initializedData.concat(successData), null, 2));
+    } else {
+      console.log(`已初始化： ${initializedData.length} 条。`);
+    }
+  };
+  
+  init();
+  ```
+   
+- 修改 package.json 中 scripts 中的脚本,添加 "gitalk":"node talk-auto-init.js".
+
+  ```json
+  {
+    "scripts": {
+      "clean": "hexo clean",
+      "publish": "git push && yarn run clean && hexo generate -d",
+      "server": "hexo server",
+      "start": "yarn run clean && yarn run server -p 9777",
+      "gitalk": "node talk-auto-init.js"
+    }
+  }
+  ```
+
+- 测试 gitalk.
+
+    yarn run gitalk
+
+- 已经缓存过后的结果:
+
+    > hexo-site@0.0.0 gitalk
+    > node talk-auto-init.js
+
+
+    --------- 运行结果 ---------
+
+    本次成功： 0 条。
+    写入缓存： 7 条，已初始化 7 条，本次成功： 0 条。参考文件 /Users/wtw/frontEnd/w-t-w.github.io/gitalk-init-cache.json.
+
+> proxy 403错误
+
+部署至个人申请购买的云服务器时,由于跨域问题,会出现 proxy 403 forbidden.解决它主要有这么几个方案.
+
+* nginx反向代理 解决方案(推荐).
+
+  在云服务器 nginx 的博客配置中加入如下内容(注意个人博客的域名必须经过 https ssl 安全证书备案).
+
+   ```shell
+server {
+    listen 443 ssl http2;
+    #...
+    location = /login/oauth/access_token {
+        add_header Access-Control-Allow-Origin 'https://white-than-wood.zone/';  //这里改成个人的域名,并删除注释
+        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+        add_header Access-Control-Allow-Headers 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+        if ($request_method = 'OPTIONS') {
+              return 204;
+        }
+        proxy_pass https://github.com/;
+    }
+    #...
+}
+  ```
+
+PS: nginx 反向代理之后,要将 proxy 指向代理域名下的链接回调进行修改.
+
+    proxy: https://white-than-wood.zone/https://github.com/login/oauth/access_token
+
+* 自建一个 workers.
+
+  地址: <a href='https://workers.cloudflare.com/'>CloudFlare Workers</a>.
+  参考文章: <a href='https://blog.dsrkafuu.net/post/2020/cloudflare-worker-cors-anywhere/'>使用 CloudFlare Workers 实现 CORS Anywhere</a>.
+
+* 使用其他人搭建的代理.
+
+  比如这个 <a href='https://github.com/gitalk/gitalk/issues/429#issuecomment-778291781'>issues</a> 介绍到的:
+
+       proxy: https://shielded-brushlands-08810.herokuapp.com/https://github.com/login/oauth/access_token
+
+* 使用 Gitalk 官方搭建的代理.
+
+  据gitalk issue<a href='https://github.com/gitalk/gitalk/issues/433'> gitalk 授权登录后报错403</a>,直接将使用 Gitalk 官方搭建的代理就可解决 403 forbidden 的问题,之前 Gitalk 官方搭建的代理由于太多人接入导致被官方限制使用,用户经常发现不能正常使用,现在已经对代理进行优化改进,不会出现限制使用的情况.
+
+  ![](https://image.white-than-wood.zone/hexo/gitalk_403.png)
+
+       https://cors-anywhere.azm.workers.dev/https://github.com/login/oauth/access_token
+
+* 更新 gitalk 版本至1.7.2.
+
+  据gitalk issue<a href='https://github.com/gitalk/gitalk/issues/433'> gitalk 授权登录后报错403</a>,直接将 gitalk 版本升级至1.7.2就可解决 403 forbidden 的问题.
+
+  ![](https://image.white-than-wood.zone/hexo/gitalk_403.png)
 
 #### hexo 其他配置
 
