accumulation:think of v8

--- a/source/_posts/2022-11-22-think-of-v8.md
+++ b/source/_posts/2022-11-22-think-of-v8.md
@@ -11,7 +11,7 @@ categories: v8
 
   使用分代回收策略,分为新、老生代.
 
-  - 新生代: 新生代的堆内存被分为多个 Semispace,每个 Semispace 分为两部分 from 和 to,分配对象空间时,只在 from 中分配,to 是闲置的,垃圾回收机制会按照以下步骤:
+  - 新生代: 新生代的堆内存被分为多个 Semispace 空间,每个 Semispace 分为两部分 from 和 to,分配对象空间时,只在 from 中分配,to 是闲置的,垃圾回收机制会按照以下步骤:
     - 查找 from 中还存活的对象,将其全部移入到 to
     - 反转 from 和 to
     - 对 to 尽数回收
