accumulation: think of nodejs

--- a/source/_posts/2022-11-22-think-of-v8.md
+++ b/source/_posts/2022-11-22-think-of-v8.md
@@ -20,4 +20,4 @@ categories: v8
     - 在反转 from 和 to 的过程中,如果 to 空间的使用量超过了 25%,那么 from 中的对象全部移入老生代
   - 老生代
     - 标记删除: 对象已死亡,会直接被剃掉删除
-    - 标记合并: 将存活的对象移到一边,将被回收的对象移到另一边,直接对可被回收的区域进行整体的垃圾回收
+      - 标记合并: 将存活的对象移到一边,将被回收的对象移到另一边,直接对可被回收的区域进行整体全部尽数的垃圾回收
